refactor, sonarqube issues solved